--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ h1 {
 }
 
 .container {
-    background-image: url('./assets/unnamed.jpg');
+    background-image: url('./assets/fond.png');
     background-size: 100%;
     background-attachment: fixed;
 		display: flex;
@@ -74,7 +74,7 @@ h1 {
 }
 
 .divHome {
-    background-image: url('./assets/beer.png');
+    background-image: url('./assets/logoNeons.png');
     height: 100vh;
     background-repeat: no-repeat;
     background-size: auto 50%;
