--- a/src/App.css
+++ b/src/App.css
@@ -3,56 +3,138 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Flavors&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Flavors&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Changa+One&family=Kumar+One&display=swap");
 
 body {
-  font-family: 'Roboto';
-	height: 100%;
+  font-family: "Roboto";
+  height: 100%;
 }
 
 a {
@@ -65,26 +147,26 @@ h1 {
 }
 
 .container {
-    background-image: url('./assets/fond.png');
-    background-size: auto 100%;
-    background-attachment: fixed;
-		background-position: center;
-		display: flex;
-		flex-flow: column;
-		height: 100vh;
+  background-image: url("./assets/fond.png");
+  background-size: auto 100%;
+  background-attachment: fixed;
+  background-position: center;
+  display: flex;
+  flex-flow: column;
+  height: 100vh;
 }
 
 .divHome {
-    background-image: url('./assets/logoNeons.png');
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: auto 50%;
-    background-position: center;
-    display: flex;
+  background-image: url("./assets/logoNeons.png");
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: auto 50%;
+  background-position: center;
+  display: flex;
 }
 
 .divHome a {
-    margin: auto;
+  margin: auto;
 }
 
 .App {
@@ -128,39 +210,37 @@ h1 {
 
 @media only screen and (max-width: 600px) {
   body {
-
   }
 
-	.blocSelection {
+  .blocSelection {
     border: 1px solid #d5dbdb;
-    width: calc(20vw - .53em);
-    height: calc(20vw - .53em);
-    margin: .2em;
-	}
+    width: calc(20vw - 0.53em);
+    height: calc(20vw - 0.53em);
+    margin: 0.2em;
+  }
 
-	.blocSelectionImage {
+  .blocSelectionImage {
     width: 100%;
     height: 100%;
-	}
+  }
 
-	.loginBtn {
-		opacity: .4;
-	}
+  .loginBtn {
+    opacity: 0.4;
+  }
 
-	.blocJeu {
+  .blocJeu {
     width: calc(50vw - 2.15em);
-	}
+  }
 
-	.blocJeuImage {
+  .blocJeuImage {
     width: calc(50vw - 2.15em);
-	}
+  }
 
-	.sessionContainer {
+  .sessionContainer {
     /*margin-top: 10.5em;*/
-	}
+  }
 
-	.choixNbrJoueurs {
+  .choixNbrJoueurs {
     display: none;
-	}
-
+  }
 }
