--- a/src/styles/GameCard.css
+++ b/src/styles/GameCard.css
@@ -1,16 +1,17 @@
 .gameBlock {
   border: 1px solid #d5dbdb;
-  width: 150px;
-  height: 250px;
-  display: inline-block;
-  margin: 1em;
   border-radius: 5px;
   overflow: hidden;
   background-color: #eef7eb;
   box-shadow: 1px 1px 5px #c8d2d2;
-  position: relative;
   cursor: pointer;
+  -webkit-user-select: none;
   user-select: none;
+  position: relative;
+  padding-bottom: 1.618033987%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: calc(100% / 8 - (1em + 2px) / 8 * 7);
 }
 
 .gameBlock.selected {
@@ -19,25 +20,31 @@
 }
 
 .gameImageBlock {
-  width: 150px;
-  height: 150px;
-  display: flex;
   overflow: hidden;
+  position: relative;
+  padding-bottom: 100%;
+  display: flex;
 }
 
 .gameImageBlock img {
   width: 100%;
+  position: absolute;
+  height: 100%;
 }
 
 .gameInfosBlock {
   padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+}
+
+.gameInfosBlock div {
+  flex: 1 1 30%;
 }
 
 .blockSpecs {
-  position: absolute;
-  bottom: 0;
-  padding: 0.5em 0;
-  width: calc(100% - 1em);
+  padding-top: 0.5em;
+  width: calc(100%);
   display: flex;
   justify-content: flex-end;
 }
@@ -52,15 +59,13 @@
 
 .gameTitle {
   width: 100%;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
   hyphens: auto;
-  height: 2em;
   overflow: hidden;
   overflow-wrap: break-word;
   text-overflow: ellipsis;
   font-size: 0.8em;
+  min-height: 2em;
+  max-height: 2em;
 }
 
 .viewMore {
@@ -71,4 +76,18 @@
   font-size: 0.8em;
   margin: 0.5em 0;
   text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .gameBlock {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: calc(100% / 2 - 1em / 2 - 2px * 2);
+  }
+}
+
+@media only screen and (max-height: 600px) and (orientation: landscape) {
+  .gameBlock {
+    flex: 0 0 calc(100% / 5 - (1em + 2px) / 5 * 4);
+  }
 }
