--- a/src/styles/selection.css
+++ b/src/styles/selection.css
@@ -1,68 +1,66 @@
 .selectionContainer {
-  flex: 0 1 auto;
+  padding: 1em;
+  background-color: #eef7eb;
+  border-bottom: 6px solid #d5dbdb;
 }
 
 .selection {
-    border-bottom: 6px solid #d5dbdb;
-    /*position: fixed;*/
-    width: 100%;
-    background-color: #eef7eb;
-    top: 0;
-    z-index: 9
+  display: flex;
+  gap: 1em;
+  flex-wrap: wrap;
 }
 
 .blocSelection {
-    border: 1px solid #d5dbdb;
-    width: 100px;
-    height: 100px;
-    display: inline-block;
-    margin: 1em;
-    border-radius: 5px;
-    background-color: #eef7eb;
-    box-shadow: 1px 1px 5px #c8d2d2;
-    position: relative;
-    overflow: hidden;
+  border: 1px solid #d5dbdb;
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  border-radius: 5px;
+  background-color: #eef7eb;
+  box-shadow: 1px 1px 5px #c8d2d2;
+  position: relative;
+  overflow: hidden;
 }
 
 .blocSelectionImage {
-    width: 100px;
-    height: 100px;
-    display: flex;
-    overflow: hidden;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  overflow: hidden;
 }
 
 .blocSelectionImage img {
-    width: 100%;
-    filter: grayscale(100%);
+  width: 100%;
+  filter: grayscale(100%);
 }
 
 .blocSelectionImage.select img {
-    width: 100%;
-    filter: grayscale(0%);
+  width: 100%;
+  filter: grayscale(0%);
 }
 
 .blocSelectionCompte {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    height: 25px;
-    width: 25px;
-    display: inline;
-    text-align: center;
-    background-color: aliceblue;
-    vertical-align: middle;
-    line-height: 25px;
-    border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 25px;
+  width: 25px;
+  display: inline;
+  text-align: center;
+  background-color: aliceblue;
+  vertical-align: middle;
+  line-height: 25px;
+  border-radius: 5px;
 }
 
 .blocSelectionVoters {
-    position: absolute;
-    top: 0;
-    padding: .5em;
-    background-color: aliceblue;
-    display: none;
+  position: absolute;
+  top: 0;
+  padding: 0.5em;
+  background-color: aliceblue;
+  display: none;
 }
 
 .blocSelection:hover .blocSelectionVoters {
-    display: flex;
+  display: flex;
 }
