--- a/src/styles/selection.css
+++ b/src/styles/selection.css
@@ -8,13 +8,13 @@
   display: flex;
   gap: 1em;
   flex-wrap: wrap;
+  width: calc(100vw - 2em);
 }
 
 .blocSelection {
   border: 1px solid #d5dbdb;
-  width: 100px;
-  height: 100px;
-  display: inline-block;
+  width: calc(100% / 16 - 1em / 16 * 15 - 2px);
+  display: flex;
   border-radius: 5px;
   background-color: #eef7eb;
   box-shadow: 1px 1px 5px #c8d2d2;
@@ -23,15 +23,18 @@
 }
 
 .blocSelectionImage {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  position: relative;
   display: flex;
   overflow: hidden;
+  padding-bottom: 100%;
 }
 
 .blocSelectionImage img {
   width: 100%;
+  height: 100%;
   filter: grayscale(100%);
+  position: absolute;
 }
 
 .blocSelectionImage.select img {
@@ -63,4 +66,16 @@
 
 .blocSelection:hover .blocSelectionVoters {
   display: flex;
+}
+
+@media screen and (max-width: 600px) {
+  .blocSelection {
+    width: calc(100% / 4 - 1em / 4 * 3 - 2px);
+  }
+}
+
+@media only screen and (max-height: 600px) and (orientation: landscape) {
+  .blocSelection {
+    width: calc(100% / 10 - 1em / 10 * 9 - 2px);
+  }
 }
