Filtering, info pane & styles

--- a/src/styles/GameCard.css
+++ b/src/styles/GameCard.css
@@ -1,4 +1,6 @@
 .gameBlock {
+  display: flex;
+  flex-direction: column;
   border: 1px solid #d5dbdb;
   border-radius: 5px;
   overflow: hidden;
@@ -8,10 +10,6 @@
   -webkit-user-select: none;
   user-select: none;
   position: relative;
-  padding-bottom: 1.618033987%;
-  flex-grow: 0;
-  flex-shrink: 0;
-  flex-basis: calc(100% / 8 - (1em + 2px) / 8 * 7);
 }
 
 .gameBlock.selected {
@@ -28,68 +26,42 @@
 
 .gameImageBlock img {
   width: 100%;
-  position: absolute;
   height: 100%;
+  position: absolute;
 }
 
 .gameInfosBlock {
   padding: 0.5em;
   display: flex;
   flex-direction: column;
-}
-
-.gameInfosBlock div {
-  flex: 1 1 30%;
+  flex: 1;
 }
 
 .blockSpecs {
+  margin-top: auto;
   padding-top: 0.5em;
-  width: calc(100%);
   display: flex;
-  justify-content: flex-end;
+  align-items: baseline;
+  font-size: 0.8em;
+  text-wrap: nowrap;
 }
 
 .blockSpecs .numberOfPlayers {
   margin-right: auto;
 }
 
-.blockSpecs .icon {
-  padding: auto;
+.blockSpecs svg {
+  vertical-align: -2px;
 }
 
 .gameTitle {
   width: 100%;
   hyphens: auto;
-  overflow: hidden;
   overflow-wrap: break-word;
-  text-overflow: ellipsis;
-  font-size: 0.8em;
-  min-height: 2em;
-  max-height: 2em;
 }
 
-.viewMore {
-  padding: 0.5em;
-  background-color: blueviolet;
-  border-radius: 5px;
-  color: #eef7eb;
-  font-size: 0.8em;
-  margin: 0.5em 0;
-  text-align: center;
-}
-
-@media screen and (max-width: 600px) {
-  .gameBlock {
-    flex-grow: 0;
-    flex-shrink: 0;
-    flex-basis: calc(100% / 2 - 1em / 2 - 2px);
-  }
-}
-
-@media only screen and (max-height: 600px) and (orientation: landscape) {
-  .gameBlock {
-    flex-grow: 0;
-    flex-shrink: 0;
-    flex-basis: calc(100% / 5 - 1em / 5 * 4 - 2px);
+@media screen and (max-width: 900px) {
+  .gameTitle {
+    font-size: 0.8em;
   }
 }
