--- a/src/styles/session.css
+++ b/src/styles/session.css
@@ -18,8 +18,15 @@
 }
 
 .sessionInner {
-  display: flex;
-  gap: 1em;
-  flex-wrap: wrap;
-  padding: 1em;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  padding: 3em;
+}
+
+@media screen and (max-width: 900px) {
+ .sessionInner {
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+    padding: 1em;
+  } 
 }
