--- a/src/App.css
+++ b/src/App.css
@@ -87,8 +87,6 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -128,13 +126,14 @@ table {
   border-spacing: 0;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Flavors&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Changa+One&family=Kumar+One&display=swap");
 
 body {
-  font-family: "Roboto";
+  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   height: 100%;
+  background-color: #282c34;
 }
 
 a {
@@ -153,12 +152,11 @@ h1 {
   background-position: center;
   display: flex;
   flex-flow: column;
-  height: 100vh;
+  height: 100dvh;
 }
 
 .divHome {
   background-image: url("./assets/logoNeons.png");
-  height: 100vh;
   background-repeat: no-repeat;
   background-size: auto 50%;
   background-position: center;
@@ -227,5 +225,46 @@ h1 {
 
   .choixNbrJoueurs {
     display: none;
+  }
+}
+
+/* Slide panel */
+.slide-pane__title {
+  margin-bottom: 1rem;
+}
+.slide-pane__close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 2em;
+}
+.slide-pane__close svg {
+  width: 24px;
+  height: 24px;
+  rotate: 180deg;
+}
+.slide-pane__overlay {
+  position: absolute;
+  z-index: 999;
+  inset: 0 0 0 33%;
+  background: #fffe;
+  padding: 3em;
+  overflow: auto;
+}
+.slide-pane__description {
+  white-space: break-spaces;
+}
+.slide-pane img {
+  max-width: 100%;
+  width: 300px;
+  float: right;
+  padding: 0 0 1em 1em;
+}
+.slide-pane:focus {
+  outline: none;
+}
+@media screen and (max-width: 1100px) {
+  .slide-pane__overlay {
+    inset: 0;
   }
 }
