--- a/src/styles/NiceList.css
+++ b/src/styles/NiceList.css
@@ -1,10 +1,6 @@
 .niceListContainer {
-  display: flex;
-  align-content: center;
-}
-
-.niceList {
-  display: inline-flex;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .niceListItem {
@@ -12,5 +8,5 @@
 }
 
 .niceListItem:not(:last-child)::after {
-  content: " \25A0 ";
+  content: " \25A0  ";
 }
