--- a/src/App.css
+++ b/src/App.css
@@ -145,11 +145,15 @@ h1 {
   font-weight: bolder;
 }
 
-.container {
+body {
+  overflow: hidden;
   background-image: url("./assets/fond.png");
-  background-size: auto 100%;
+  background-size: cover;
   background-attachment: fixed;
   background-position: center;
+}
+
+.container {
   display: flex;
   flex-flow: column;
   height: 100dvh;
@@ -161,6 +165,7 @@ h1 {
   background-size: auto 50%;
   background-position: center;
   display: flex;
+  height: 100%;
 }
 
 .divHome a {
