--- a/src/styles/glitch.css
+++ b/src/styles/glitch.css
@@ -1,14 +1,9 @@
 .glitch-wrapper {
   width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-image: url("./../assets/fond.png");
-  background-size: auto 100vh;
-  background-attachment: fixed;
-  background-position: center;
   flex-direction: column;
 }
 
@@ -16,9 +11,7 @@
   position: relative;
   font-size: 80px;
   font-weight: 700;
-  line-height: 1.2;
-  /*color: #fff;*/
-  /*letter-spacing: 5px;*/
+  line-height: 1;
   z-index: 1;
 }
 
@@ -27,7 +20,7 @@
 
 .glitch .firstOverlay {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: -2px;
   width: 100%;
   background-image: url("./../assets/fond.png");
