--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,10 +7,16 @@
   height: 155px;
   text-align: center;
   text-shadow: 0 0 10px #b0eb6d;
-
+  user-select: none;
   font-family: "Kumar One", serif;
   font-weight: 400;
   font-style: normal;
+}
+
+@media screen and (max-width: 900px) {
+  .divTextHome {
+    text-shadow: 0 0 10px #b0eb6d99;
+  }
 }
 
 .textHomeCountdown .designation {
