--- a/src/styles/SortingTool.css
+++ b/src/styles/SortingTool.css
@@ -1,6 +1,7 @@
 .sotingTool {
   display: flex;
   flex-direction: column;
+  gap: 0.5em;
 }
 
 .sotingTool .range span {
@@ -12,6 +13,13 @@
   display: flex;
   flex-grow: 2;
   gap: 0.25em;
+}
+
+.inputGroup {
+  display: flex;
+  align-items: center;
+  gap: 0.2em;
+  font-family: monospace;
 }
 
 .sortGamesButtons {
