--- a/src/styles/selection.css
+++ b/src/styles/selection.css
@@ -6,13 +6,13 @@
   top: 0;
   z-index: 9;
   max-height: 500px;
-  transition: all 0.5s ease 0.5s;
-  translate: 0 -100%;
+  transition: transform 0.5s ease 0.5s;
+  transform: translate(0, -100%);
 }
 
 .selectionContainer.visibleSelection {
   padding: 1em;
-  translate: 0 0;
+  transform: translate(0, 0);
 }
 
 .selection {
@@ -112,14 +112,17 @@
   scale: 0 0.5;
   border-radius: 50%;
   transform-origin: top right;
-  transition: all 0.2s ease;
+  transition:
+    border-radius 0.2s ease,
+    scale 0.2s ease,
+    background-color 0.2s ease,
+    color 0.2s ease;
   user-select: none;
 }
 
 .blocSelection:hover .blocSelectionVoters {
   scale: 1 1;
   border-radius: 0;
-  background: #fff;
   background-color: aliceblue;
   color: inherit;
 }
